# rsx-redux

./: .gitignore  Cargo.toml  README.md
desktop/: Cargo.toml  hardware.sh  hardware_gl.sh  hardware_metal.sh  software.sh
desktop/shaders/: Shaders.metal  ShadersFb.metal
desktop/src/: frontend.rs  main.rs  renderer.rs
desktop/src/shaders/: Shaders.metal
macos/: .gitignore  Cargo.toml  build-rust.sh  compile.sh
macos/src/: lib.rs
renderer-metal/: Cargo.toml
renderer-metal/src/: renderer.rs
renderer-opengl/: Cargo.toml
renderer-opengl/src/: renderer.rs
renderer-opengl/src/shaders/: fragment.glsl  fragment_fb.glsl  fragment_writeback.glsl  vertex.glsl  vertex_fb.glsl
renderer-webgl/: Cargo.toml
renderer-webgl/src/: renderer.rs
renderer-webgl/src/shaders/: fragment.glsl  fragment_fb.glsl  fragment_writeback.glsl  vertex.glsl  vertex_fb.glsl
src/: cpu.rs
src/cpu/: bus.rs  cop0.rs  disassembler.rs  gte.rs  instructions.rs
src/cpu/bus/: cdrom.rs  cdrom_old.rs  gpu.rs  mdec.rs  peripherals.rs  scheduler.rs  spu.rs  spu_legacy.rs  timer.rs
src/cpu/bus/cdrom/: registers.rs
src/cpu/bus/dma/: dma.rs  dma_channel.rs  dma_channel_control_register.rs  dma_control_register.rs  dma_interrupt_register.rs  mod.rs
src/cpu/bus/gpu/: deltas.rs  render.rs
src/cpu/bus/peripherals/: controller.rs  memory_card.rs  sio_control.rs  sio_mode.rs
src/cpu/bus/registers/: delay_register.rs  dma_control_register.rs  interrupt_register.rs  mod.rs
src/cpu/bus/spu/: reverb.rs  spu_control_register.rs  spu_stat_register.rs  voice.rs
src/cpu/bus/spu_legacy/: adsr.rs  reverb.rs  spu_control.rs  voices.rs
src/cpu/bus/timer/: counter_mode_register.rs
web/: Cargo.toml
web/app/: audio_processing_node.js  declarations.d.ts  index.html  index.ts  package-lock.json  package.json  tsconfig.json
web/app/src/: psx.ts
web/app/src/cloud_saves/: cloud_service.ts
web/app/src/input/: joypad.ts
web/app/src/output/: audio_output.ts  video_output.ts
web/app/src/saves/: rsx_db.ts  state_manager.ts
web/app/src/util/: wave_visualizer.ts
web/app/styles/: app.scss  audio-modal.scss  cloud-saves-modal.scss  controller-modal.scss  save-states-modal.scss
web/pkg/: package.json  rsx_redux_web.d.ts  rsx_redux_web.js  rsx_redux_web_bg.wasm  rsx_redux_web_bg.wasm.d.ts
web/src/: lib.rs
