[workspace]
members = ["desktop"]
resolver = "2"

[package]
name = "rsx-redux"
version = "0.1.0"
edition = "2024"

[dependencies]
bitflags = { version = "2.9.1", features = ["serde"] }
priority-queue = "2.5.0"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
memmap2 = "0.9.7"
ringbuf="0.4.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = { version = "2.0.1", features = ["serde"]}

[features]
default = ["old_spu", "software_gpu"]
old_spu = []
new_spu = []
hardware_gpu = []
software_gpu = []