[package]
name = "rsx-redux"
version = "0.1.0"
edition = "2024"

[dependencies]
bitflags = { version = "2.9.1", features = ["serde"] }
priority-queue = "2.5.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = { version = "2.0.1", features = ["serde"]}
ringbuf="0.4.8"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
memmap2 = "0.9.7"

[features]
default = ["hardware_gpu_opengl"]
hardware_gpu_metal = []
hardware_gpu_opengl = []
software_gpu = []
hardware_gpu_web = []
debug = []
