[package]
name = "rsx-redux-desktop"
version = "0.1.0"
edition = "2024"

[dependencies]
rsx-redux = { path = "..", default-features = false }
renderer-metal = { path = "../renderer-metal", default-features = true }
sdl2 = "0.37"
objc2 = "0.6.1"
sdl2-sys = "0.37.0"
objc2-quartz-core = { version = "0.3.1", features = ["CAMetalLayer"] }
objc2-core-foundation = "0.3.1"
memmap2 = "0.9.7"
ringbuf="0.4.8"
dirs-next = "2.0.0"
zstd = "0.13"

[features]
default = ["hardware_gpu"]
software_gpu = ["rsx-redux/software_gpu"]
hardware_gpu = ["rsx-redux/hardware_gpu", "renderer-metal/hardware_gpu"]
debug = ["rsx-redux/debug"]