[package]
name = "renderer-metal"
version = "0.1.0"
edition = "2024"

[dependencies]
rsx-redux = { path = "..", default-features = false }
objc2-quartz-core = { version = "0.3.1", features = ["CAMetalLayer"] }
objc2-core-foundation = "0.3.1"
objc2-metal = "0.3.1"
objc2 = "0.6.1"
objc2-foundation = "0.3.1"

[features]
default = ["hardware_gpu_metal"]
hardware_gpu_metal = ["rsx-redux/hardware_gpu_metal"]
bundle_shaders = []