[package]
name = "rsx-redux-web"
version = "0.1.0"
edition = "2021"

[lib]
path="src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
rsx-redux = { path = "../", default-features = false, features=["hardware_gpu_web"] }
renderer-webgl = { path = "../renderer-webgl", optional=true, default-features = false }
console_error_panic_hook = "0.1.7"
wasm-bindgen = "0.2.123"

[features]
default = ["hardware_gpu_web"]
hardware_gpu_web = ["renderer-webgl"]
software_gpu = []
